# Zhaotianle

./: .clangd  .gitignore  CMakeLists.txt  README.md  drone_backend.cpp  drone_backend.hpp
api-go/: go.mod  go.sum  grpc_client.go  handlers_local.go  main.go
api-go/pkg/grpcpc/: README.md  drone_control.pb.go  drone_control_grpc.pb.go
config/: access_control_policies.yaml  airspace_config.yaml  authentication_config.yaml  flight_paths.yaml  hitl_test_config.yaml  main_config.yaml  px4_simulation_config.yaml
config/certificates/: commercial_drone.csr  encryption.key  government_drone.csr  rsa_leaf_ext.cnf  university_drone.csr
config/examples/: development_config.yaml  production_config.yaml
docs/: EDGE_ACCESS_FULL_FLOW_TEST.md
include/: backend_init.hpp
include/access_control/: abac_policy_engine.hpp  access_control_engine.hpp  access_control_policy.hpp  access_decision.hpp  access_decision_generator.hpp  access_request.hpp  expression_evaluator.hpp  policy_config_loader.hpp
include/attributes/: attribute_aggregator.hpp  attribute_provider.hpp  base_attribute_provider.hpp  database_attribute_provider.hpp  environment_attribute_provider.hpp
include/authentication/: authentication_provider.hpp  authentication_provider_factory.hpp  x509_certificate_provider.hpp  x509_certificate_provider_miracl.hpp
include/common/: drone_attributes.hpp  types.hpp
include/communication/: mavlink_manager.hpp  mavlink_manager_concurrent_runner.hpp
include/database/: database_manager.hpp
include/edge/: edge_device_manager.hpp
include/error/: error_recovery_manager.hpp  security_violation_handler.hpp
include/flight_control/: flight_control_module.hpp  flight_plan.hpp
include/resources/: airspace_resource_manager.hpp
include/signature/: dss_ms_signature.hpp  geofence_signature_service.hpp  mission_signature_verifier.hpp
include/state/: drone_state_manager.hpp
proto/: drone_control.proto
src/: backend_init.cpp  main.cpp
src/access_control/: abac_policy_engine.cpp  access_control_engine.cpp  access_decision_generator.cpp  expression_evaluator.cpp  policy_config_loader.cpp
src/api/: access_api.cpp  access_api.hpp  drone_api.cpp  drone_api.hpp  flight_api.cpp  flight_api.hpp  http_server.cpp  http_server.hpp  response_utils.cpp  response_utils.hpp
src/attributes/: attribute_aggregator.cpp  attribute_provider.cpp  database_attribute_provider.cpp  environment_attribute_provider.cpp
src/authentication/: authentication_provider.cpp  authentication_provider_factory.cpp  x509_certificate_provider.cpp  x509_certificate_provider_miracl.cpp
src/communication/: mavlink_manager.cpp  mavlink_manager_access.cpp  mavlink_manager_concurrent_runner.cpp  mavlink_manager_control.cpp  mavlink_manager_ingest.cpp  mavlink_manager_tx.cpp
src/database/: config_manager.cpp  database_manager.cpp  database_service_main.cpp  postgresql_database.cpp
src/edge/: edge_device_main.cpp  edge_device_manager.cpp
src/error/: error_recovery_manager.cpp  security_violation_handler.cpp
src/flight_control/: flight_control_module.cpp  flight_plan.cpp
src/grpc/: grpc_server_main.cpp
src/resources/: airspace_resource_manager.cpp
src/signature/: dss_ms_signature.cpp  geofence_signature_service.cpp  geofence_signature_service_path.cpp  geofence_signature_service_region.cpp  geofence_signature_service_ta.cpp  mission_signature_verifier.cpp
src/state/: drone_state_manager.cpp
